Update and rename Курсовая работа python 3 Козлов Марк (1).ipynb to Course Work Code.ipynb

--- a/Course Work Code.ipynb
+++ b/Course Work Code.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = 'C:/Users/Mark/Desktop/Данные/'\n",
+    "directory = './Data/'\n",
     "files = os.listdir(directory)\n",
     "\n",
     "# ['GAZP', 'SIBN', ...]\n",
@@ -131,7 +131,7 @@
     "down_df = pd.DataFrame(columns=months, index=tickers.keys())\n",
     "\n",
     "for company in tickers.keys():\n",
-    "    with open('C:/Users/Mark/Desktop/Данные/'+f'{company}.csv') as file:        \n",
+    "    with open('/Data/'+f'{company}.csv') as file:        \n",
     "        mylist = []\n",
     "        # так как файл с данными очень велик, будем считывать \n",
     "        # с помощью особого метода\n",
@@ -237,7 +237,7 @@
     "    for j, company in enumerate(com):\n",
     "        close_value_array = []\n",
     "\n",
-    "        with open('C:/Users/Mark/Desktop/Данные/' + f'{company}.csv') as file:        \n",
+    "        with open('/Data/' + f'{company}.csv') as file:        \n",
     "            mylist = []\n",
     "            for chunk in pd.read_csv(file, sep=';', chunksize=20_000):\n",
     "                mylist.append(chunk)\n",
@@ -572,7 +572,7 @@
     "all_pvalues = []\n",
     "\n",
     "for company in tickers.keys():\n",
-    "    with open('C:/Users/Mark/Desktop/Данные/' + f'{company}.csv') as file:        \n",
+    "    with open('/Data/' + f'{company}.csv') as file:        \n",
     "        mylist = []\n",
     "        for chunk in pd.read_csv(file, sep=';', chunksize=20_000):\n",
     "            mylist.append(chunk)\n",
